fix gallery column center align

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,6 +59,9 @@ h2 {
   width: 60%;
   float: left;
   padding: 100px, 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .button_group {
@@ -110,6 +113,9 @@ h2 {
   }
 
 .slide {
+  display:flex;
+  justify-content: center;
+  align-items: center;
   max-width: 100%;
   max-height: 85vh;
   padding: 50px 20px;
